[gd_scene load_steps=12 format=3 uid="uid://dces3e55616v5"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_sfosh"]
[ext_resource type="Texture2D" uid="uid://dqlynnw5748ta" path="res://crosshair.png" id="2_v71jm"]
[ext_resource type="Script" path="res://Scripts/bodypart.gd" id="2_wfych"]
[ext_resource type="Texture2D" uid="uid://d03pvpgtacada" path="res://Sprites/icons/marker_icon.png" id="4_jacde"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_gmr4f"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uqqjj"]
height = 1.40141

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_42ps6"]

[sub_resource type="SphereShape3D" id="SphereShape3D_3bbqp"]

[sub_resource type="Animation" id="Animation_p3ofd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 2.58754, 0)]
}

[sub_resource type="Animation" id="Animation_vdel4"]
resource_name = "duck"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 0.5, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 0.5, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 2.58754, 0), Vector3(0, 2.32754, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j2af8"]
_data = {
"RESET": SubResource("Animation_p3ofd"),
"duck": SubResource("Animation_vdel4")
}

[node name="CharacterBody3D" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0040685, 0)
collision_layer = 4
script = ExtResource("1_sfosh")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.12679, 0)
mesh = SubResource("CapsuleMesh_gmr4f")

[node name="bone_body" type="PhysicalBone3D" parent="MeshInstance3D" groups=["group_player", "has_hp"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("2_wfych")

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/bone_body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.20769, 0.0131297)
shape = SubResource("CapsuleShape3D_uqqjj")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.127, 0)
shape = SubResource("CapsuleShape3D_42ps6")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.58754, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
cull_mask = 1048573

[node name="flashlight" type="SpotLight3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.25633)
layers = 3
light_color = Color(1, 1, 0.545098, 1)
light_energy = 9.0
shadow_enabled = true
spot_range = 10.0
spot_angle = 30.0

[node name="basiclight" type="SpotLight3D" parent="Head/Camera3D"]
light_energy = 0.5
spot_range = 2.0
spot_angle = 70.0

[node name="CanvasLayer" type="CanvasLayer" parent="Head/Camera3D"]
layer = 2

[node name="Crosshair" type="Sprite2D" parent="Head/Camera3D/CanvasLayer"]
position = Vector2(576, 325)
texture = ExtResource("2_v71jm")

[node name="SubViewportContainer" type="SubViewportContainer" parent="Head/Camera3D/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Head/Camera3D/CanvasLayer/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Head/Camera3D/CanvasLayer/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.86406, 0)
cull_mask = 2

[node name="display_ammo" type="TextEdit" parent="Head/Camera3D/CanvasLayer/SubViewportContainer/SubViewport/Camera3D"]
offset_left = 996.0
offset_top = 553.0
offset_right = 1112.0
offset_bottom = 603.0
placeholder_text = "L/S"

[node name="display_hp" type="TextEdit" parent="Head/Camera3D/CanvasLayer/SubViewportContainer/SubViewport/Camera3D"]
offset_left = 40.0
offset_top = 40.0
offset_right = 120.0
offset_bottom = 80.0
placeholder_text = "HP"

[node name="display_interaction" type="ProgressBar" parent="Head/Camera3D/CanvasLayer/SubViewportContainer/SubViewport/Camera3D"]
offset_left = 490.0
offset_top = 400.0
offset_right = 690.0
offset_bottom = 440.0
show_percentage = false

[node name="display_inventory" type="Container" parent="Head/Camera3D/CanvasLayer/SubViewportContainer/SubViewport/Camera3D"]
offset_right = 40.0
offset_bottom = 40.0

[node name="inv_1" type="Sprite2D" parent="Head/Camera3D/CanvasLayer/SubViewportContainer/SubViewport/Camera3D/display_inventory"]
position = Vector2(400, 500)

[node name="inv_2" type="Sprite2D" parent="Head/Camera3D/CanvasLayer/SubViewportContainer/SubViewport/Camera3D/display_inventory"]
position = Vector2(550, 500)

[node name="inv_3" type="Sprite2D" parent="Head/Camera3D/CanvasLayer/SubViewportContainer/SubViewport/Camera3D/display_inventory"]
position = Vector2(700, 500)

[node name="inv_timer" type="Timer" parent="Head/Camera3D/CanvasLayer/SubViewportContainer/SubViewport/Camera3D/display_inventory"]

[node name="inventory_marker" type="Sprite2D" parent="Head/Camera3D/CanvasLayer/SubViewportContainer/SubViewport/Camera3D/display_inventory"]
texture = ExtResource("4_jacde")

[node name="raycast_interaction" type="RayCast3D" parent="Head/Camera3D"]
transform = Transform3D(5.73206e-15, 1.31134e-07, 3, 3, -1.31134e-07, 0, 1.31134e-07, 3, -1.31134e-07, 0, 0, -0.585909)
collision_mask = 2
collide_with_areas = true

[node name="bone_head" type="PhysicalBone3D" parent="Head" groups=["group_player", "has_hp"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("2_wfych")
damage_multiplier = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/bone_head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0157435)
shape = SubResource("SphereShape3D_3bbqp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j2af8")
}

[connection signal="bodypart_hit" from="MeshInstance3D/bone_body" to="." method="_on_bone_body_bodypart_hit"]
[connection signal="bodypart_hit" from="Head/bone_head" to="." method="_on_bone_head_bodypart_hit"]
