[gd_scene load_steps=17 format=3 uid="uid://dces3e55616v5"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_sfosh"]
[ext_resource type="Texture2D" uid="uid://dqlynnw5748ta" path="res://crosshair.png" id="2_v71jm"]
[ext_resource type="Script" path="res://Scripts/bodypart.gd" id="2_wfych"]
[ext_resource type="Texture2D" uid="uid://d03pvpgtacada" path="res://Sprites/icons/marker_icon.png" id="4_jacde"]
[ext_resource type="Script" path="res://Scripts/ui.gd" id="4_jnmva"]
[ext_resource type="PackedScene" uid="uid://c8t3e1hbyggdb" path="res://shader_underwater.tscn" id="5_04qer"]
[ext_resource type="Texture2D" uid="uid://s8xdfalmmcfd" path="res://Sprites/heart_icon.png" id="6_r3w6o"]
[ext_resource type="Texture2D" uid="uid://dqjibcsf605dr" path="res://Sprites/pistol_bullet_icon.png" id="7_6se36"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_gmr4f"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uqqjj"]
height = 1.40141

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_42ps6"]

[sub_resource type="SphereShape3D" id="SphereShape3D_3bbqp"]

[sub_resource type="Animation" id="Animation_p3ofd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 2.58754, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Head:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_a48sd"]
resource_name = "die"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.26667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-1.5708, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.26667, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 3.14159, 0)]
}

[sub_resource type="Animation" id="Animation_vdel4"]
resource_name = "duck"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 0.5, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 0.5, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 2.58754, 0), Vector3(0, 2.32754, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j2af8"]
_data = {
"RESET": SubResource("Animation_p3ofd"),
"die": SubResource("Animation_a48sd"),
"duck": SubResource("Animation_vdel4")
}

[node name="CharacterBody3D" type="CharacterBody3D"]
collision_layer = 4
script = ExtResource("1_sfosh")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.17, 0)
visible = false
mesh = SubResource("CapsuleMesh_gmr4f")

[node name="bone_body" type="PhysicalBone3D" parent="MeshInstance3D" groups=["group_player", "has_blood", "has_hp"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("2_wfych")

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/bone_body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.20769, 0.0131297)
shape = SubResource("CapsuleShape3D_uqqjj")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.127, 0)
shape = SubResource("CapsuleShape3D_42ps6")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.58754, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
cull_mask = 1048573
size = 0.5
far = 100.0

[node name="flashlight" type="SpotLight3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.25633)
light_color = Color(1, 1, 0.545098, 1)
light_energy = 16.0
shadow_enabled = true
spot_range = 10.0
spot_angle = 30.0

[node name="basiclight" type="SpotLight3D" parent="Head/Camera3D"]
light_energy = 0.5
spot_range = 2.0
spot_angle = 70.0

[node name="CanvasLayer" type="CanvasLayer" parent="Head/Camera3D"]
layer = 2

[node name="Crosshair" type="Sprite2D" parent="Head/Camera3D/CanvasLayer"]
position = Vector2(576, 325)
texture = ExtResource("2_v71jm")

[node name="SubViewportContainer" type="SubViewportContainer" parent="Head/Camera3D/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Head/Camera3D/CanvasLayer/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Head/Camera3D/CanvasLayer/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.58874, 0)
cull_mask = 2

[node name="CanvasGroup" type="CanvasGroup" parent="Head/Camera3D/CanvasLayer/SubViewportContainer/SubViewport/Camera3D"]
script = ExtResource("4_jnmva")

[node name="display_ammo" type="TextEdit" parent="Head/Camera3D/CanvasLayer/SubViewportContainer/SubViewport/Camera3D/CanvasGroup"]
offset_left = 32.0
offset_top = 553.0
offset_right = 148.0
offset_bottom = 603.0
placeholder_text = "L/S"

[node name="display_hp" type="TextEdit" parent="Head/Camera3D/CanvasLayer/SubViewportContainer/SubViewport/Camera3D/CanvasGroup"]
offset_left = 40.0
offset_top = 40.0
offset_right = 120.0
offset_bottom = 80.0
placeholder_text = "HP"

[node name="display_interaction" type="ProgressBar" parent="Head/Camera3D/CanvasLayer/SubViewportContainer/SubViewport/Camera3D/CanvasGroup"]
offset_left = 490.0
offset_top = 400.0
offset_right = 690.0
offset_bottom = 440.0
show_percentage = false

[node name="display_inventory" type="Container" parent="Head/Camera3D/CanvasLayer/SubViewportContainer/SubViewport/Camera3D/CanvasGroup"]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="inv_previous" type="Sprite2D" parent="Head/Camera3D/CanvasLayer/SubViewportContainer/SubViewport/Camera3D/CanvasGroup/display_inventory"]
modulate = Color(1, 1, 1, 0.392157)
texture_filter = 1
position = Vector2(450, 600)
scale = Vector2(0.8, 0.8)

[node name="inv_selected" type="Sprite2D" parent="Head/Camera3D/CanvasLayer/SubViewportContainer/SubViewport/Camera3D/CanvasGroup/display_inventory"]
texture_filter = 1
position = Vector2(550, 580)

[node name="inv_next" type="Sprite2D" parent="Head/Camera3D/CanvasLayer/SubViewportContainer/SubViewport/Camera3D/CanvasGroup/display_inventory"]
modulate = Color(1, 1, 1, 0.392157)
texture_filter = 1
position = Vector2(650, 600)
scale = Vector2(0.8, 0.8)

[node name="inv_timer" type="Timer" parent="Head/Camera3D/CanvasLayer/SubViewportContainer/SubViewport/Camera3D/CanvasGroup/display_inventory"]
one_shot = true

[node name="inventory_marker" type="Sprite2D" parent="Head/Camera3D/CanvasLayer/SubViewportContainer/SubViewport/Camera3D/CanvasGroup/display_inventory"]
visible = false
texture = ExtResource("4_jacde")

[node name="help_text" type="TextEdit" parent="Head/Camera3D/CanvasLayer/SubViewportContainer/SubViewport/Camera3D/CanvasGroup"]
visible = false
offset_left = 32.0
offset_top = 256.0
offset_right = 288.0
offset_bottom = 588.0
text = "F1 Help

F2 - Restart
WASD - move
F(hold) - interact
R - reload
Shift - sprint
Ctrl - duck
Tab - change weapon
G - drop weapon
J - flashlight
RMB - aim down sight"

[node name="display_conversation" type="TextEdit" parent="Head/Camera3D/CanvasLayer/SubViewportContainer/SubViewport/Camera3D/CanvasGroup"]
visible = false
offset_left = 200.0
offset_top = 350.0
offset_right = 1000.0
offset_bottom = 606.0
theme_override_constants/outline_size = 1
theme_override_constants/line_spacing = 5
placeholder_text = "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet."
wrap_mode = 1

[node name="conversation_timer" type="Timer" parent="Head/Camera3D/CanvasLayer/SubViewportContainer/SubViewport/Camera3D/CanvasGroup/display_conversation"]
wait_time = 2.0

[node name="icon_heart" type="Sprite2D" parent="Head/Camera3D/CanvasLayer/SubViewportContainer/SubViewport/Camera3D/CanvasGroup"]
texture_filter = 1
position = Vector2(100, 55)
texture = ExtResource("6_r3w6o")

[node name="icon_ammo" type="Sprite2D" parent="Head/Camera3D/CanvasLayer/SubViewportContainer/SubViewport/Camera3D/CanvasGroup"]
texture_filter = 1
position = Vector2(100, 570)
texture = ExtResource("7_6se36")

[node name="gui_wiggle_timer" type="Timer" parent="Head/Camera3D/CanvasLayer/SubViewportContainer/SubViewport/Camera3D/CanvasGroup"]
wait_time = 5.0
one_shot = true

[node name="raycast_interaction" type="RayCast3D" parent="Head/Camera3D"]
transform = Transform3D(5.73208e-15, 1.31134e-07, 3, 3, -1.31134e-07, -1.92556e-20, 1.31134e-07, 3, -1.31134e-07, 0, 0, 0.514353)
visible = false
collision_mask = 8
collide_with_areas = true

[node name="raycast_aim" type="RayCast3D" parent="Head/Camera3D"]
transform = Transform3D(1.91069e-16, 4.37114e-06, 0.1, 0.1, -4.37114e-06, 0, 4.37114e-09, 100, -4.37114e-09, 0, 0, 0)
collision_mask = 3

[node name="shader_underwater" parent="Head/Camera3D" instance=ExtResource("5_04qer")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, -0.5)
visible = false

[node name="raycast_head_place" type="RayCast3D" parent="Head/Camera3D"]
transform = Transform3D(9.55343e-16, 2.18557e-08, 0.5, 0.5, -2.18557e-08, 1.05879e-22, 2.18557e-08, 0.5, -2.18557e-08, 0, 0, 0)
visible = false
collision_mask = 256
hit_from_inside = true
collide_with_areas = true

[node name="bullet_spawn" type="Node3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 2.11758e-22, 1, 0, 0, 1.481e-28, 1, 0, 0, 0)

[node name="bone_head" type="PhysicalBone3D" parent="Head" groups=["group_player", "has_blood", "has_hp"]]
visible = false
collision_layer = 2
collision_mask = 2
script = ExtResource("2_wfych")
damage_multiplier = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/bone_head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0157435)
visible = false
shape = SubResource("SphereShape3D_3bbqp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j2af8")
}

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.52839, 0)

[connection signal="bodypart_hit" from="MeshInstance3D/bone_body" to="." method="_on_bone_body_bodypart_hit"]
[connection signal="timeout" from="Head/Camera3D/CanvasLayer/SubViewportContainer/SubViewport/Camera3D/CanvasGroup/display_inventory/inv_timer" to="." method="_on_inv_timer_timeout"]
[connection signal="timeout" from="Head/Camera3D/CanvasLayer/SubViewportContainer/SubViewport/Camera3D/CanvasGroup/gui_wiggle_timer" to="Head/Camera3D/CanvasLayer/SubViewportContainer/SubViewport/Camera3D/CanvasGroup" method="_on_gui_wiggle_timer_timeout"]
[connection signal="bodypart_hit" from="Head/bone_head" to="." method="_on_bone_head_bodypart_hit"]
